fix: enhance docs
